<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_pane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/temp"
        style="@style/weather_field_headers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/temperature"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/overlock_black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/temp"
        app:layout_constraintStart_toStartOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <TextView
        android:id="@+id/wind_speed"
        style="@style/weather_field_headers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/wind_speed"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <TextView
        android:id="@+id/wind_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/overlock_black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/wind_speed"
        app:layout_constraintStart_toStartOf="@+id/wind_speed"
        app:layout_constraintTop_toBottomOf="@+id/wind_speed" />

    <TextView
        android:id="@+id/humidity"
        style="@style/weather_field_headers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:text="@string/humidity"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure" />

    <TextView
        android:id="@+id/humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/overlock_black"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/humidity"
        app:layout_constraintStart_toStartOf="@+id/humidity"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />

    <TextView
        android:id="@+id/pressure"
        style="@style/weather_field_headers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/pressure"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pressure_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/overlock_black"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/pressure"
        app:layout_constraintStart_toStartOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/pressure" />

    <TextView
        android:id="@+id/city_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="@color/TransparentGrey"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1.5"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/temp_image"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:contentDescription="@string/temperature_icon"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="@+id/temp"
        app:layout_constraintStart_toStartOf="@+id/temp"
        app:srcCompat="@drawable/ic_wb_sunny_black_24dp" />

    <ImageView
        android:id="@+id/wind_image"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:contentDescription="@string/wind_icon"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/wind_speed"
        app:layout_constraintEnd_toEndOf="@+id/wind_speed"
        app:layout_constraintStart_toStartOf="@+id/wind_speed"
        app:srcCompat="@drawable/ic_wind" />

    <ImageView
        android:id="@+id/humidity_image"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:contentDescription="@string/humidity_icon"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/humidity"
        app:layout_constraintEnd_toEndOf="@+id/humidity"
        app:layout_constraintStart_toStartOf="@+id/humidity"
        app:srcCompat="@drawable/ic_humidity" />

    <ImageView
        android:id="@+id/pressure_image"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:contentDescription="@string/pressure_icon"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/pressure"
        app:layout_constraintEnd_toEndOf="@+id/pressure"
        app:layout_constraintStart_toStartOf="@+id/pressure"
        app:srcCompat="@drawable/ic_pressure" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/work_sans"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/error_img"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/error_icon"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/error_message"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_error_black_24dp" />

    <TextView
        android:id="@+id/unit_field"
        style="@style/weather_field_headers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/unit_field_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginBottom="32dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loading_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar" />

</android.support.constraint.ConstraintLayout>