<resources>
    <string name="app_name">MyWeather</string>
    <string name="action_settings">Settings</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_units">Unit of measurement</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_theme">Colour schema</string>

    <string name="pref_title_choose_theme">Theme</string>


    <string name="choose_theme">Choose theme</string>
    <string name="temperature_icon">Temperature icon</string>
    <string name="wind_icon">Wind Icon</string>
    <string name="humidity_icon">humidity Icon</string>
    <string name="pressure_icon">pressure Icon</string>

    <string name="error_icon">Error Icon</string>
    <string name="my_weather">My Weather</string>
    <string name="unit_setting_option">Units of measurement</string>
    <string name="unit_field_content">A field to display Unit</string>

    <string name="show_progress_getting_user_Settings">Getting your settings</string>
    <string name="show_progress_getting_weather">Getting your local weather</string>

    <string name="display_error_must_have_internet">Must have internet to get weather</string>

    <string name="permission_needed">Permission needed</string>
    <string name="why_permission_is_needed">Without this permission this app cannot give you the weather</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="success_message">Weather Loaded</string>

</resources>
